[update] 批量修改等级功能

--- a/weapp/member/templates/member/editor/members.html
+++ b/weapp/member/templates/member/editor/members.html
@@ -84,7 +84,7 @@
 				</div>
 				<div class="pr xui-inlineblock">
 					<a type="button" class="pr dropdown-toggle" data-toggle="dropdown" data-target="#" style="width:96px;">
-						添加到
+						修改等级
 				   	</a>
 				   	<ul class="dropdown-menu multi-level" role="menu"  aria-labelledby="dropdownMenu">
 					    <li class="dropdown-submenu">
@@ -94,7 +94,37 @@
 						   	<ul class="dropdown-menu xui-dropbox" style="min-height:29px;">
 						   		<div class="drop-box-arrow drop-box-arrow-left"></div>
 						   		{% for grade in grades %}
-						   		<li><a href="javascript:void(0);" class="update-grade" data-id="{{grade.id}}">{{grade.name}}</a></li>
+						   		<li><a href="javascript:void(0);" class="update-grade" data-id="{{grade.id}}" data-status="selected">{{grade.name}}</a></li>
+						   		{% endfor %}
+						   	</ul>
+					    </li>
+					    <li class="dropdown-submenu">
+					    	<a class=""  type="button"  href="javascript:void(0);" >
+								给筛选出来的所有人修改等级
+						   	</a>
+						   	<ul class="dropdown-menu xui-dropbox" {% if user_tags|length == 0 %}style="display:none;"{% endif %} style="min-height:29px;">
+						   		<div class="drop-box-arrow drop-box-arrow-left"></div>
+						   		{% for grade in grades %}
+						   		<li><a href="javascript:void(0);" class="update-grade" data-id="{{grade.id}}" data-status="all">{{grade.name}}</a></li>
+						   		{% endfor %}
+						   	</ul>
+					    </li>
+					</ul>
+				</div>
+
+				<div class="pr xui-inlineblock">
+					<a type="button" class="pr dropdown-toggle" data-toggle="dropdown" data-target="#" style="width:96px;">
+						添加分组
+				   	</a>
+				   	<ul class="dropdown-menu multi-level" role="menu"  aria-labelledby="dropdownMenu">
+					    <li class="dropdown-submenu">
+					    	<a class="" type="button"  href="javascript:void(0);">
+								给选中的人修改等级
+						   	</a>
+						   	<ul class="dropdown-menu xui-dropbox" style="min-height:29px;">
+						   		<div class="drop-box-arrow drop-box-arrow-left"></div>
+						   		{% for tag in user_tags %}
+						   		<li><a href="javascript:void(0);" class="update-tag" data-id="{{tag.id}}">{{tag.name}}</a></li>
 						   		{% endfor %}
 						   	</ul>
 					    </li>
@@ -335,21 +365,32 @@ $(document).ready(function() {
 	$('.update_dropdown').delegate('.update-grade', 'click', function(event){
 		var post_ids = [];
 		var grade_id = $(this).attr('data-id');
+		var status = $(this).attr('data-status');
+
 	 	$('input.xa-select:checked').each(function(){
     		console.log($(this).parent().parent().attr('data-id'))
     		post_ids.push($(this).parent().parent().attr('data-id'))
-  			});
+  		});
 	 	var dataView = $('[data-ui-role="advanced-table"]').data('view')
 		dataView.setPage(1);
 		dataView.args = view.getFilterValue();
-	 	if (grade_id && post_ids.length > 0) {
+		var args = {
+			ids:post_ids.join('-'), 
+			grade_id:grade_id,
+			update_status: status
+		}
+		if (status == 'all') {
+			// 合并筛选条件
+			var dataArgs = JSON.parse(view.getFilterValueByDict(dataView.args));
+			args = _.extend(args, dataArgs);
+		}
+	 	if (grade_id && post_ids.length > 0 || status == 'all') {
 	 		W.getApi().call({
 	            method: 'post',
 	            app: 'member',
 	            api: 'grade/batch_update',
-	            args:{ids:post_ids.join('-'), grade_id:grade_id},
+	            args: args,
 	            success: function(data) {
-	                 //window.location.reload();
 	                 dataView.reload();
 	            },
 	            error: function(response) {
@@ -357,6 +398,8 @@ $(document).ready(function() {
 	            },
 	            scope: this
 	        });
+	 	}else{
+	 		W.getErrorHintView().show('请先选择会员！');
 	 	}
 	});
 	// 修改分组
