限时抢购和积分同时存在的tag

--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
@@ -73,7 +73,7 @@ a.xui-btn:link,a.xui-btn:hover,.xui-btn:visited{color:#fff!important;}
             </div>
             {% endif %}
             {% if product.integral_sale %}
-            <div class="disT w">
+            <div class="disT w" style="margin-top:1px;">
                 <div class="disTc em85 c6" style="width:3rem;">
                 {% if not product.promotion or not product.promotion_model.is_active %}
                     优惠：
