--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/product_review_all_user_list.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/product_review_all_user_list.html
@@ -11,7 +11,7 @@
 		<ul class="xui-reviewlist">
 			{% for review in product_review_list %}
 				<li>
-			        <div class="clearfix pt10 pb10">
+			        <div class="clearfix pb10" style="padding-top:12px;">
 			            <div class="fl">
 				            <div class="xui-user">
 				                <img src="{% if review.user_icon %}{{ review.user_icon }}{% else %}/static/img/user-1.jpg{% endif %}" data-allow-autoplay="true">
