--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/product_review_all_user_list.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/product_review_all_user_list.html
@@ -22,7 +22,7 @@
 			                	{% endautoescape %}
 			                </span>
 			            </div>
-			            <span class="fr">{{ review.created_at|date:"Y-m-j" }}</span>
+			            <span class="fr" style="line-height:30px;">{{ review.created_at|date:"Y-m-j" }}</span>
 			        </div>
 			        <p class="em85 c6">{{ review.review_detail }}</p>
 					{% if review.custom_model_properties %}
