--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/product_review_all_user_list.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/product_review_all_user_list.html
@@ -10,7 +10,7 @@
 	<div class="xui-content">
 		<ul class="xui-reviewlist">
 			{% for review in product_review_list %}
-				<li>
+				<li style="border-top:1px solid #efefef;">
 			        <div class="clearfix pb10" style="padding-top:12px;">
 			            <div class="fl">
 				            <div class="xui-user">
