修复商品详情页积分应+会员价用不同等级限时积分抵扣数值不变的BUG

--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
@@ -470,6 +470,7 @@ $(document).ready(function() {
                 if(has_discount === "True"){
                     //促销与会员价格处理
                     view.discount = data.discount;
+                    view.initForStandardModelProduct()
                     price = ((price * data.discount / 100).toFixed(2));
                     msg = '会员价';
                     view.member_or_promotion = 'member';
