--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
@@ -467,7 +467,7 @@ $(document).ready(function() {
             if(!is_user_has_promotion){
                 // 商品是否折扣
                 has_discount = is_member_product;
-                if(has_discount === "True"){
+                if(has_discount === "True" && data.discount < 100){
                     //促销与会员价格处理
                     view.discount = data.discount;
                     view.initForStandardModelProduct()
