扫码详情昵称超出隐藏

--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
@@ -54,7 +54,8 @@
 		border-radius: 5px;
 	}
 	.xui-RecommendedDetailPage .xui-tableview .xui-tableCell .xui-p{
-		height: 18px;
+		height: 16px;
+		overflow-y:hidden; 
 		width: 100%;
 		text-align: center;
 		font-size: 12px;
