推荐扫码黄色块上方圆角

--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
@@ -51,7 +51,8 @@
 		color: #fff;
 		font-family: "华文细黑";
 		text-align: center;
-		border-radius: 5px;
+		border-radius:0px 0px 5px 5px;
+
 	}
 	.xui-RecommendedDetailPage .xui-tableview .xui-tableCell .xui-p{
 		height: 16px;
