--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
@@ -470,7 +470,11 @@ $(document).ready(function() {
                 if(has_discount === "True" && data.discount < 100){
                     //促销与会员价格处理
                     view.discount = data.discount;
-                    view.initForStandardModelProduct()
+                    if(view.targetModel){
+                        view.initForStandardModelProduct()
+                    }else{
+                        view.initForCustomModelProduct()
+                    }
                     price = ((price * data.discount / 100).toFixed(2));
                     msg = '会员价';
                     view.member_or_promotion = 'member';
