--- a/weapp/mall/templates/mall/editor/promotion/create_flash_sale.html
+++ b/weapp/mall/templates/mall/editor/promotion/create_flash_sale.html
@@ -237,7 +237,7 @@ function validatePromotionPrice($el){
   // 获取价格
   var productPrice = $.trim($('.xa-product-price').text()).split('~')[0];
   var promotionPrice = $.trim($('.xa-promotion-price').val());
-  var isValidate = parseInt(promotionPrice) < parseInt(productPrice);
+  var isValidate = parseFloat(promotionPrice) < parseFloat(productPrice);
   return {
 	isValidate: isValidate,
 	errorHint: '限购价格应小于商品原价'
