--- a/weapp/member/templates/member/editor/members.html
+++ b/weapp/member/templates/member/editor/members.html
@@ -66,23 +66,6 @@
 				</div>
 				&nbsp;&nbsp;
 				<div class="pr xui-inlineblock">
-					<a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" data-target="#" style="width:96px;">
-						发优惠券</span>
-				   	</a>
-				   	<ul class="dropdown-menu multi-level" role="menu"  aria-labelledby="dropdownMenu">
-					    <li class="dropdown-submenu">
-					    	<a class="xa-select-member" type="button"  href="javascript:void(0);">
-								给选中的人发优惠券（已跑路除外）</span>
-						   	</a>
-					    </li>
-					    <li class="dropdown-submenu">
-					    	<a class="xa-all-member"  type="button"  href="javascript:void(0);" >
-								给筛选出来的所有人发优惠券（已跑路除外）</span>
-						   	</a>
-					    </li>
-					</ul>
-				</div>
-				<div class="pr xui-inlineblock">
 					<a href="javascript:void(0);" type="button" class="pr dropdown-toggle" data-toggle="dropdown" data-target="#" style="width:96px;">
 						修改等级
 				   	</a>
@@ -109,7 +92,7 @@
 					    </li>
 					</ul>
 				</div>
-
+				&nbsp;&nbsp;
 				<div class="pr xui-inlineblock">
 					<a href="javascript:void(0);" type="button" class="pr dropdown-toggle" data-toggle="dropdown" data-target="#" style="width:96px;">
 						添加分组
@@ -137,7 +120,24 @@
 					    </li>
 					</ul>
 				</div>
-
+				&nbsp;&nbsp;
+				<div class="pr xui-inlineblock">
+					<a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" data-target="#" style="width:96px;">
+						发优惠券</span>
+				   	</a>
+				   	<ul class="dropdown-menu multi-level" role="menu"  aria-labelledby="dropdownMenu">
+					    <li class="dropdown-submenu">
+					    	<a class="xa-select-member" type="button"  href="javascript:void(0);">
+								给选中的人发优惠券（已跑路除外）</span>
+						   	</a>
+					    </li>
+					    <li class="dropdown-submenu">
+					    	<a class="xa-all-member"  type="button"  href="javascript:void(0);" >
+								给筛选出来的所有人发优惠券（已跑路除外）</span>
+						   	</a>
+					    </li>
+					</ul>
+				</div>
 			</div>
 		</div>
 	</div>
