添加二级菜单后的提示文字

--- a/weapp/static_v2/js/view/workbench_property_view/template.html
+++ b/weapp/static_v2/js/view/workbench_property_view/template.html
@@ -463,10 +463,10 @@
 											
 										{{/if}}
 									</div>
+									<div class="xui-hide xa-seconde-navs-prompt">请选择二级菜单链接</div>
 									<div class="errorHint"></div>
 								</div>
-								{{/if}}								
-
+								{{/if}}
 
 								{{if (dynamicComponentField.type == 'second_navs')}}
 								<div class="propertyGroup_property_secondNavsField propertyGroup_property_horizontalField">
