保存二级菜单

--- a/weapp/static_v2/js/view/workbench_property_view/template.html
+++ b/weapp/static_v2/js/view/workbench_property_view/template.html
@@ -476,6 +476,7 @@
 											class="xa-thirdPartyPlugin"
 											data-plugin="secondnav" 
 											data-ui-role="termite-navbar-secondnav"
+											data-json="${dynamicComponent.model.get(dynamicComponentField.name)}"
 										></div>
 									</div>
 								</div>
