--- a/weapp/static_v2/js/view/termite_navbar_second_nav/template.html
+++ b/weapp/static_v2/js/view/termite_navbar_second_nav/template.html
@@ -17,7 +17,7 @@
 					name="title"
 					type="text" 
 					class="input-small xui-propertyGroup-input " 
-					value="" 
+					value="{{title}}" 
 					placeholder="编辑[文本导航]" 
 					maxlength="30" 
 					data-validate="require-notempty::导航名称不能为空" 
@@ -35,7 +35,7 @@
 					<span class="xa-selectLink-name xui-selected-title"></span>
 					<button class="close xa-selectLink-close xui-removeImageButton" style="display:block;" type="button"><span>×</span></button>
 				</div>
-				<a class="xa-link-menu xui-link xui-news-editor-select-link-dialog" data-target-dialog="" data-dialog-parameter="" data-target-name="target">
+				<a class="xa-second-nav-link-menu xui-link xui-news-editor-select-link-dialog" data-target-dialog="" data-dialog-parameter="" data-target-name="target">
 					从微站选择<span class="glyphicon glyphicon-menu-down"></span>
 				</a>
 			</div>
