--- a/weapp/termite2/templates/termite2/pages.html
+++ b/weapp/termite2/templates/termite2/pages.html
@@ -47,7 +47,7 @@
                         <p>1.以前旧店铺模板入口将被删除，换用新店铺模板入口；</p>
                         <p> 2.以前旧店铺模板页面配置好的链接会自动变成新店铺模板链接，不需重新配置；</p>
                         <p> 3.以前被分享出去的店铺模板链接被点击后还会跳到对应的旧店铺模板页面；</p>
-                        <p class="cRed">*建议：新的店铺主页做好,商品都配置好之后，在点击启用新模板。</p>
+                        <p class="cRed">*建议：新的店铺主页做好,商品都配置好之后，再点击启用新模板。</p>
                     </div>
                     
                     <div class="tc" style="height:54px;background:#F5F5F5;">
