--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -38,7 +38,8 @@
         <script type="text/javascript" src="/termite_static/backbone/underscore-1.4.4.min.js"></script>
         <script type="text/javascript" src="/termite_static/v3/webapp/backbone_lite.js"></script>
         <script type="text/javascript" src="/termite_static/v3/gmu/widget/swipeImage.js"></script>
-        <script type="text/javascript" src="/termite_static/v3/gmu/widget/swipemask.js"></script>
+        <script type="text/javascript" src="/termite_static/v3/gmu/widget/weshopBottomNav.js"></script>
+        <script type="text/javascript" src="/termite_static/v3/gmu/widget/weshopSideNav.js"></script>
         <script type="text/javascript" src="/termite_static/v3/system/api.js"></script>
         <script type="text/javascript" src="/termite_static/v3/system/crypto-js.js"></script>
         <script type="text/javascript" src="/termite_static/v3/system/md5.js"></script>
@@ -84,9 +85,9 @@
             {% block content-panel %}{% endblock %}
         {% endif %}
         <!-- 全局导航 -->
-        <div class="xui-template-globalNavbar">
+        <div class="wui-template-globalNavbar xa-template-globalNavbar">
             <!-- 模板1 -->
-           <!--  <div class="xui-globalBottomBar">
+          <!--   <div class="xui-globalBottomBar" data-ui-role="bottomNav">
                 <div class="xui-home">
                     <a href="###" class="xui-bg"></a>
                 </div>
@@ -104,49 +105,68 @@
                         </ul>
                     </div>
                 </div>
-                <div class="xui-flex xui-flex-two">标题</div>
-            </div> -->
+                <div class="xui-flex xui-flex-two">
+                    <div class="xui-menu xa-menu f14">
+                        <a href="###">标题</a>
+                    </div>
+                    <div class="xui-subMenuContainer">
+                        <span class="xui-menuArrow"></span>
+                        <span class="xui-menuArrowBorder"></span>
+                        <ul class="xui-subMenu">
+                            <li class="f12"><a href="###">标题名</a></li>
+                            <li class="f12"><a href="###">标题名</a></li>
+                            <li class="f12"><a href="###">标题名</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>  -->
             
             <!-- 模板2 -->
-            <div class="xui-globalSideBar">
-                <div class="xui-bottomNav">
+            <div class="wui-weshopSideBar" data-ui-role="sideNav">
+                <div class="xui-globalSideBar" data-ui-role="sideNav">
+                    <div class="xui-bottomNav">
+                        <ul class="">
+                            <li class="xa-bottomMenu "><i class="xui-bg"></i></li>
+                            <li class="xa-bottomMenu xa-categoryBtn"><i class="xui-bg"></i></li>
+                            <li class="xa-bottomMenu">
+                                <i class="xui-bg"><span class="xui-shopCar">2</span></i>
+                                
+                            </li>
+                            <li class="xa-bottomMenu "><i class="xui-bg"></i></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="xui-sidePanel xa-sidePanel" id="xa-wrapper">
                     <ul class="xui-mainMenu">
-                        <li class="xa-bottomMenu "><i class="xui-bg"></i></li>
-                        <li class="xa-bottomMenu xa-categoryBtn"><i class="xui-bg"></i></li>
-                        <li class="xa-bottomMenu "><i class="xui-bg"></i></li>
-                        <li class="xa-bottomMenu "><i class="xui-bg"></i></li>
+                        <li class="xui-firstNav">
+                            <a href="###">
+                                <span>全部商品<i class="xui-leftArrow"></i></span>
+                            </a></li>
+                        <li class="xui-firstNav xa-firstNav"> 
+                            <a href="###">
+                                <span>衣服分类衣服分类衣服<i class="xui-leftArrow"></i></span>
+                            </a>
+                            <ul class="xui-subMenu">
+                                <li class="pl50"><a href="###">衣服分类衣服分类衣服</a></li>
+                                <li class="pl50"><a href="###">衣服分类衣服分类衣服</a></li>
+                                <li class="pl50"><a href="###">衣服分类衣服分类衣服</a></li>
+                                <li class="pl50"><a href="###">衣服分类衣服分类衣服</a></li>
+                            </ul>
+                        </li>
+                         <li class="xui-firstNav xa-firstNav"> 
+                            <span>衣服分类衣服分类衣服<i class="xui-leftArrow"></i></span>
+                        </li>
+                         <li class="xui-firstNav xa-firstNav"> 
+                            <span>衣服分类衣服分类衣服<i class="xui-leftArrow"></i></span>
+                            <ul class="xui-subMenu">
+                                <li class="pl50">衣服分类衣服分类衣服</li>
+                            </ul>
+                        </li>
                     </ul>
                 </div>
             </div>
-            <div class="xui-sidePanel xa-sidePanel">
-                <ul class="xui-mainMenu">
-                    <li class="xui-allProduct">全部商品</li>
-                    <li class="xui-firstNav xa-firstNav"> 
-                        <a href="###">
-                            <span>衣服分类衣服分类衣服<i class="xui-leftArrow"></i></span>
-                        </a>
-                        <ul class="xui-subMenu">
-                            <li class="pl50"><a href="###">衣服分类衣服分类衣服</a></li>
-                            <li class="pl50"><a href="###">衣服分类衣服分类衣服</a></li>
-                            <li class="pl50"><a href="###">衣服分类衣服分类衣服</a></li>
-                            <li class="pl50"><a href="###">衣服分类衣服分类衣服</a></li>
-                        </ul>
-                    </li>
-                     <li class="xui-firstNav xa-firstNav"> 
-                        <span>衣服分类衣服分类衣服<i class="xui-leftArrow"></i></span>
-                    </li>
-                     <li class="xui-firstNav xa-firstNav"> 
-                        <span>衣服分类衣服分类衣服<i class="xui-leftArrow"></i></span>
-                        <ul class="xui-subMenu">
-                            <li class="pl50">衣服分类衣服分类衣服</li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-            <div class="xui-handleHint"></div>
 
         </div>
-        <div class="mask" data-ui-role="swipemask"></div>
         <div id="jsons" style="display: none;">
             {% for json in jsons %}
             <div id="__json-{{json.name}}">
@@ -270,19 +290,6 @@
         });
         
         </script>
-        <!--店铺全局导航底部导航 -->
-        <script type="text/javascript">
-            $(document).ready(function(){
-                $('.xa-menu').click(function(event) {
-                  var $subMenuContainer = $(this).siblings('.xui-subMenuContainer');
-                  if( $subMenuContainer.length >0 ){
-                    $subMenuContainer.toggleClass('xui-show');
-                    var width = $subMenuContainer.width();
-                    $subMenuContainer.css('margin-left',-width/2);
-                  }
-                });
-            });
-        </script>
 
         <!-- 店铺全局导航侧滑 -->
         <script type="text/javascript">
@@ -294,63 +301,41 @@
             var $leftPanel = $('.xa-sidePanel');
             var $firstNav = $('.xa-firstNav');
             var $bottomMenu = $('.xa-bottomMenu');
-            var $handleHint = $('.xui-handleHint');
             var block = false;
             // 点击出现侧滑面板
             if ($categoryBtn.length >0) {
-                $leftPanel.height(height-10);  //左侧面板高度，100%会出现滚动条，导致后面内容跟着滚动
                 $categoryBtn.click(function() {
-                    if(!block){
-                        $('body').swipeMask('show');
-                        $handleHint.css({
-                            display: 'block',
-                            top: (height-50)/2,
-                            left:(rest+218)
-                        });
-                        $('.mask').css({
-                            height: height,
-                            background: 'rgba(160,160,160,0.5)'
-                        });
-                        $('.xui-sidePanel').addClass('xui-panelShow');
-                        block = true;
-                    }else{
-                        $('body').swipeMask('hide');
-                        $('.xui-sidePanel').removeClass('xui-panelShow');
-                        block = false;
-                    };
+                    $('.xui-sidePanel').show();
+                    var myscroll = new iScroll('xa-wrapper',{hScrollbar:false});
+                });
+                $leftPanel.css('height',height-50);  //左侧面板高度，100%会出现滚动条，导致后面内容跟着滚动
+                $categoryBtn.siblings('li').click(function() {
+                    $('.xui-sidePanel').hide();
+                });
+                // 点击一级菜单
+                $firstNav.click(function() {
+                    var $arrow = $(this).find('span i');
+                    var $subMenu = $(this).find('.xui-subMenu');
+                    if( $subMenu.length >0 ){
+                        var display = $subMenu.css('display');
+                        if( display != 'block'){
+                            $arrow.removeClass('xui-leftArrow');
+                            $arrow.addClass('xui-topArrow');
+                            $subMenu.show();
+                        }else{
+                            $arrow.removeClass('xui-topArrow');
+                            $arrow.addClass('xui-leftArrow');
+                            $subMenu.hide();
+                        }
+                    }
+                });
 
+                // 点击底部导航图标改变
+                $bottomMenu.click(function() {
+                    $(this).find('i').addClass('xui-active');
+                    $(this).siblings().find('i').removeClass('xui-active');
                 });
             };
-            // 点击蒙版收回侧面板
-            $('.mask').click(function(event) {
-                $('body').swipeMask('hide');
-                $('.xui-sidePanel').removeClass('xui-panelShow');
-                 $bottomMenu.find('.xui-active').removeClass('xui-active');
-                block = false;
-            });
-            // 点击一级菜单
-            $firstNav.click(function() {
-                var $arrow = $(this).find('span i');
-                var $subMenu = $(this).find('.xui-subMenu');
-                if( $subMenu.length >0 ){
-                    var display = $subMenu.css('display');
-                    if( display != 'block'){
-                        $arrow.removeClass('xui-leftArrow');
-                        $arrow.addClass('xui-topArrow');
-                        $subMenu.show();
-                    }else{
-                        $arrow.removeClass('xui-topArrow');
-                        $arrow.addClass('xui-leftArrow');
-                        $subMenu.hide();
-                    }
-                }
-            });
-
-            // 点击底部导航图标改变
-            $bottomMenu.click(function() {
-                $(this).find('i').toggleClass('xui-active');
-                $(this).siblings().find('i').removeClass('xui-active')
-            });
          });
 
         </script>
@@ -384,7 +369,7 @@
                     W.sharePageImg = "http://"+window.location.host+W.sharePageImg;
             var link = window.location.href;
             if (link.indexOf('fmt') === -1){
-                if (link.indexOf('/?') === -1){
+                if (link.indexOf('&') === -1){
                     link = link +"?fmt="+W.curRequestMemberToken;
                 } else {
                     link = link +"&fmt="+W.curRequestMemberToken;
