--- a/weapp/termite/static/termite_js/app/component/wepage/navbar/navbar.html
+++ b/weapp/termite/static/termite_js/app/component/wepage/navbar/navbar.html
@@ -2,10 +2,88 @@
 
 {% ifequal component.type 'wepage.navbar' %}
 <div 
-	class="wui-navbar"
+	class="wui-template-globalNavbar"
     data-component-cid="{{component.cid}}" 
     style=""
 >
-    我是{{component.model.type}}底部导航
+{{component.model.type}}
+    {% if component.model.type == "weixin" %}
+    <div class="xui-globalBottomBar" data-ui-role="bottomNav">
+                <div class="xui-home">
+                    <a href="###" class="xui-bg"></a>
+                </div>
+                <div class="xui-flex xui-flex-two">
+                    <div class="xui-menu xa-menu f14">
+                        <a href="###">标题</a>
+                    </div>
+                    <div class="xui-subMenuContainer">
+                        <span class="xui-menuArrow"></span>
+                        <span class="xui-menuArrowBorder"></span>
+                        <ul class="xui-subMenu">
+                            <li class="f12"><a href="###">标题名</a></li>
+                            <li class="f12"><a href="###">标题名</a></li>
+                            <li class="f12"><a href="###">标题名</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="xui-flex xui-flex-two">
+                    <div class="xui-menu xa-menu f14">
+                        <a href="###">标题</a>
+                    </div>
+                    <div class="xui-subMenuContainer">
+                        <span class="xui-menuArrow"></span>
+                        <span class="xui-menuArrowBorder"></span>
+                        <ul class="xui-subMenu">
+                            <li class="f12"><a href="###">标题名</a></li>
+                            <li class="f12"><a href="###">标题名</a></li>
+                            <li class="f12"><a href="###">标题名</a></li>
+                        </ul>
+                    </div>
+                </div>
+        </div>
+    {% endif  %}
+    {% if component.model.type == "slide" %}
+    <div class="xui-globalSideBar" data-ui-role="sideNav">
+                <div class="xui-bottomNav">
+                    <ul class="">
+                        <li class="xa-bottomMenu "><i class="xui-bg"></i></li>
+                        <li class="xa-bottomMenu xa-categoryBtn"><i class="xui-bg"></i></li>
+                        <li class="xa-bottomMenu">
+                            <i class="xui-bg"><span class="xui-shopCar">2</span></i>
+                            
+                        </li>
+                        <li class="xa-bottomMenu "><i class="xui-bg"></i></li>
+                    </ul>
+                </div>
+    </div>
+    <div class="xui-sidePanel xa-sidePanel" id="xa-wrapper" style="display:block;">
+        <ul class="xui-mainMenu">
+            <li class="xui-firstNav">
+                <a href="###">
+                    <span>全部商品<i class="xui-leftArrow"></i></span>
+                </a></li>
+            <li class="xui-firstNav xa-firstNav"> 
+                <a href="###">
+                    <span>衣服分类衣服分类衣服<i class="xui-leftArrow"></i></span>
+                </a>
+                <ul class="xui-subMenu">
+                    <li class="pl50"><a href="###">衣服分类衣服分类衣服</a></li>
+                    <li class="pl50"><a href="###">衣服分类衣服分类衣服</a></li>
+                    <li class="pl50"><a href="###">衣服分类衣服分类衣服</a></li>
+                    <li class="pl50"><a href="###">衣服分类衣服分类衣服</a></li>
+                </ul>
+            </li>
+             <li class="xui-firstNav xa-firstNav"> 
+                <span>衣服分类衣服分类衣服<i class="xui-leftArrow"></i></span>
+            </li>
+             <li class="xui-firstNav xa-firstNav"> 
+                <span>衣服分类衣服分类衣服<i class="xui-leftArrow"></i></span>
+                <ul class="xui-subMenu">
+                    <li class="pl50">衣服分类衣服分类衣服</li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+    {% endif %}
 </div>
 {% endifequal %}
