--- a/weapp/termite2/templates/termite2/wepage_design_page.html
+++ b/weapp/termite2/templates/termite2/wepage_design_page.html
@@ -42,6 +42,7 @@
 		<script type="text/javascript" src="/termite_static/v3/system/api.js"></script>
 
 		<script type="text/javascript" src="/termite_static/v3/gmu/widget/swipeImage.js"></script>
+		<script type="text/javascript" src="/termite_static/v3/gmu/widget/weshopBottomNav.js"></script>
 
 		<script type="text/javascript" src="/static/backbone/underscore-1.4.4.min.js"></script>
 		<script type="text/javascript" src="/static/backbone/backbone-1.0.0.min.js"></script>
