好友列表样式

--- a/weapp/member/templates/member/editor/members.html
+++ b/weapp/member/templates/member/editor/members.html
@@ -31,7 +31,7 @@
 					全选
 				</label>
 			</span>
-			<div class="pr xui-inlineblock">
+			<div class="pr xui-inlineblock ">
 				<a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" data-target="#" style="width:96px;">
 					群发消息</span>
 			   	</a>
@@ -49,7 +49,7 @@
 				</ul>
 			</div>
 			&nbsp;&nbsp;
-			<div class="pr xui-inlineblock ">
+			<div class="pr xui-inlineblock mr10">
 				<a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" data-target="#" style="width:96px;">
 					发优惠券</span>
 			   	</a>
@@ -67,7 +67,7 @@
 				</ul>
 			</div>
 
-			<div class="pr xui-inlineblock">
+			<div class="pr xui-inlineblock mr10">
 				<a href="javascript:void(0);" type="button" class="pr dropdown-toggle" data-toggle="dropdown" data-target="#" style="width:96px;">
 					修改等级
 			   	</a>
@@ -256,9 +256,9 @@
 {% verbatim %}
 <script id="members-view" type="text/x-jquery-tmpl">
 	<div class="w500 pa pr30 " style="top:10px;left:500px;line-height:30px;">		
-		<label class="fr">全部会员：${data.total_count}人</label>
+		<label class="fr">筛选结果：${data.total_count}人</label>
 
-		<a href="javascript:void(0);" class="btn fr  btn-default xa-export mr20 ">筛选结果</a>
+		<a href="javascript:void(0);" class="btn fr  btn-default xa-export mr20 ">导出结果</a>
 
 	</div>
 	<table class="table table-bordered xui-productList xb-stripedTable xb-noTdBorder xb-noBottom xb-noBorder xb-theadBg" >
